parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ANY
    AS
    ASSERTS
    ASYNC
    AWAIT
    BREAK
    CASE
    CATCH
    CLASS
    COMMENT
    COMMENTMULTI
    CONSTRUCTOR
    CONTINUE
    DEBUGGER
    DECLARE
    DEFAULT
    DELETE
    DO
    DOT
    DQUOTE
    ENUM
    EXPORT
    EXTENDS
    FINALLY
    FROM
    GET
    GLOBAL
    HEXADECIMAL
    IMPLEMENTS
    IMPORT
    IN
    INFER
    INSTANCEOF
    INTERFACE
    INTERNAL
    IS
    KEYOF
    MODULE
    NAMESPACE
    NEVER
    NEW
    NULL
    OBJECT
    OCTAL
    OF
    PACKAGE
    PRIVATE
    PROTECTED
    PUBLIC
    READONLY
    REQUIRE
    SET
    SQUOTE
    STATIC
    SUPER
    SWITCH
    SYMBOL
    THIS
    THROW
    TRY
    TYPE
    TYPEOF
    UNDEFINED
    UNIQUE
    UNKNOWN
    WITH
    YIELD

Grammar

Rule 0     S' -> programa
Rule 1     programa -> funcdecl
Rule 2     programa -> funcdecl programa
Rule 3     programa -> comandos
Rule 4     programa -> comandos programa
Rule 5     vardecl -> tipodecl ID COLON tipo
Rule 6     vardecl -> tipodecl ID COLON tipo ASSIGN expressao
Rule 7     vardecl -> tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
Rule 8     vardecl -> tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
Rule 9     vardecl -> tipodecl ID COLON LPAREN tipo BAR tipo RPAREN RBRACKET LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
Rule 10    funcdecl -> signature body
Rule 11    signature -> tipofunc ID LPAREN funcparametros RPAREN COLON tipo body
Rule 12    signature -> tipofunc ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON
Rule 13    body -> LBRACE comandos RBRACE
Rule 14    tipofunc -> FUNCTION
Rule 15    tipofunc -> CONST
Rule 16    funcparametros -> ID COLON tipo COMMA funcparametros
Rule 17    funcparametros -> ID COLON tipo
Rule 18    comandos -> comando
Rule 19    comandos -> comando comandos
Rule 20    comando -> RETURN expressao SEMICOLON
Rule 21    comando -> expressao SEMICOLON
Rule 22    comando -> WHILE LPAREN expressao RPAREN bodyorcomando
Rule 23    comando -> IF LPAREN expressao RPAREN bodyorcomando
Rule 24    comando -> IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
Rule 25    comando -> FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
Rule 26    opexp -> expressao
Rule 27    opexp -> VOID
Rule 28    bodyorcomando -> body
Rule 29    bodyorcomando -> comando
Rule 30    expressao -> expressao PLUS expressao
Rule 31    expressao -> expressao MINUS expressao
Rule 32    expressao -> expressao TIMES expressao
Rule 33    expressao -> expressao DIVIDE expressao
Rule 34    expressao -> expressao MOD expressao
Rule 35    expressao -> expressao OR expressao
Rule 36    expressao -> expressao AND expressao
Rule 37    expressao -> expressao EQ expressao
Rule 38    expressao -> expressao NEQ expressao
Rule 39    expressao -> expressao GE expressao
Rule 40    expressao -> expressao LE expressao
Rule 41    expressao -> expressao LT expressao
Rule 42    expressao -> expressao GT expressao
Rule 43    expressao -> expressao INCREMENT
Rule 44    expressao -> expressao EXPO expressao
Rule 45    expressao -> expressao DECREMENT
Rule 46    expressao -> INCREMENTN expressao
Rule 47    expressao -> DECREMENTN expressao
Rule 48    expressao -> expressao TIMESINCREMENT expressao
Rule 49    expressao -> expressao DIVIDEINCREMENT expressao
Rule 50    expressao -> expressao MODINCREMENT expressao
Rule 51    expressao -> expressao EEQ expressao
Rule 52    expressao -> vardecl
Rule 53    expressao -> expressao NNEQ expressao
Rule 54    expressao -> expressao INTER expressao INTER expressao
Rule 55    expressao -> NINT
Rule 56    expressao -> NFLOAT
Rule 57    expressao -> string
Rule 58    expressao -> call
Rule 59    expressao -> assign
Rule 60    expressao -> ID
Rule 61    expressao -> FALSE
Rule 62    expressao -> TRUE
Rule 63    expressao -> NOT expressao
Rule 64    call -> ID LPAREN parametros RPAREN
Rule 65    call -> ID LPAREN RPAREN
Rule 66    parametros -> expressao COMMA parametros
Rule 67    parametros -> expressao
Rule 68    assign -> ID ASSIGN expressao
Rule 69    tipodecl -> LET
Rule 70    tipodecl -> VAR
Rule 71    tipodecl -> CONST tipo
Rule 72    tipo -> STRING
Rule 73    tipo -> NUMBER
Rule 74    tipo -> BOOLEAN
Rule 75    listexp -> expressao
Rule 76    listexp -> expressao COMMA listexp
Rule 77    string -> STRINGD
Rule 78    string -> STRINGS

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 36
ANY                  : 
AS                   : 
ASSERTS              : 
ASSIGN               : 6 7 8 9 68
ASYNC                : 
AWAIT                : 
BAR                  : 9
BOOLEAN              : 74
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
COLON                : 5 6 7 8 9 11 12 16 17
COMMA                : 16 66 76
COMMENT              : 
COMMENTMULTI         : 
CONST                : 15 71
CONSTRUCTOR          : 
CONTINUE             : 
DEBUGGER             : 
DECLARE              : 
DECREMENT            : 45
DECREMENTN           : 47
DEFAULT              : 
DELETE               : 
DIVIDE               : 33
DIVIDEINCREMENT      : 49
DO                   : 
DOT                  : 
DQUOTE               : 
EEQ                  : 51
ELSE                 : 24
ENUM                 : 
EQ                   : 37
EXPO                 : 44
EXPORT               : 
EXTENDS              : 
FALSE                : 61
FINALLY              : 
FOR                  : 25
FROM                 : 
FUNCTION             : 14
GE                   : 39
GET                  : 
GLOBAL               : 
GT                   : 42
HEXADECIMAL          : 
ID                   : 5 6 7 8 9 11 12 16 17 60 64 65 68
IF                   : 23 24
IMPLEMENTS           : 
IMPORT               : 
IN                   : 
INCREMENT            : 43
INCREMENTN           : 46
INFER                : 
INSTANCEOF           : 
INTER                : 54 54
INTERFACE            : 
INTERNAL             : 
IS                   : 
KEYOF                : 
LBRACE               : 13
LBRACKET             : 7 7 8 8 9 9
LE                   : 40
LET                  : 69
LPAREN               : 9 11 12 22 23 24 25 64 65
LT                   : 41
MINUS                : 31
MOD                  : 34
MODINCREMENT         : 50
MODULE               : 
NAMESPACE            : 
NEQ                  : 38
NEVER                : 
NEW                  : 
NFLOAT               : 56
NINT                 : 55
NNEQ                 : 53
NOT                  : 63
NULL                 : 
NUMBER               : 73
OBJECT               : 
OCTAL                : 
OF                   : 
OR                   : 35
PACKAGE              : 
PLUS                 : 30
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RBRACE               : 13
RBRACKET             : 7 7 8 8 9 9 9
READONLY             : 
REQUIRE              : 
RETURN               : 20
RPAREN               : 9 11 12 22 23 24 25 64 65
SEMICOLON            : 12 20 21 25 25
SET                  : 
SQUOTE               : 
STATIC               : 
STRING               : 72
STRINGD              : 77
STRINGS              : 78
SUPER                : 
SWITCH               : 
SYMBOL               : 
THIS                 : 
THROW                : 
TIMES                : 32
TIMESINCREMENT       : 48
TRUE                 : 62
TRY                  : 
TYPE                 : 
TYPEOF               : 
UNDEFINED            : 
UNIQUE               : 
UNKNOWN              : 
VAR                  : 70
VOID                 : 27
WHILE                : 22
WITH                 : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

assign               : 59
body                 : 10 11 28
bodyorcomando        : 22 23 24 24 25
call                 : 58
comando              : 18 19 29
comandos             : 3 4 13 19
expressao            : 6 20 21 22 23 24 26 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 44 45 46 47 48 48 49 49 50 50 51 51 53 53 54 54 54 63 66 67 68 75 76
funcdecl             : 1 2
funcparametros       : 11 12 16
listexp              : 8 9 76
opexp                : 25 25 25
parametros           : 64 66
programa             : 2 4 0
signature            : 10
string               : 57
tipo                 : 5 6 7 8 9 9 11 12 16 17 71
tipodecl             : 5 6 7 8 9
tipofunc             : 11 12
vardecl              : 52

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . funcdecl
    (2) programa -> . funcdecl programa
    (3) programa -> . comandos
    (4) programa -> . comandos programa
    (10) funcdecl -> . signature body
    (18) comandos -> . comando
    (19) comandos -> . comando comandos
    (11) signature -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo body
    (12) signature -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON
    (20) comando -> . RETURN expressao SEMICOLON
    (21) comando -> . expressao SEMICOLON
    (22) comando -> . WHILE LPAREN expressao RPAREN bodyorcomando
    (23) comando -> . IF LPAREN expressao RPAREN bodyorcomando
    (24) comando -> . IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
    (25) comando -> . FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
    (14) tipofunc -> . FUNCTION
    (15) tipofunc -> . CONST
    (30) expressao -> . expressao PLUS expressao
    (31) expressao -> . expressao MINUS expressao
    (32) expressao -> . expressao TIMES expressao
    (33) expressao -> . expressao DIVIDE expressao
    (34) expressao -> . expressao MOD expressao
    (35) expressao -> . expressao OR expressao
    (36) expressao -> . expressao AND expressao
    (37) expressao -> . expressao EQ expressao
    (38) expressao -> . expressao NEQ expressao
    (39) expressao -> . expressao GE expressao
    (40) expressao -> . expressao LE expressao
    (41) expressao -> . expressao LT expressao
    (42) expressao -> . expressao GT expressao
    (43) expressao -> . expressao INCREMENT
    (44) expressao -> . expressao EXPO expressao
    (45) expressao -> . expressao DECREMENT
    (46) expressao -> . INCREMENTN expressao
    (47) expressao -> . DECREMENTN expressao
    (48) expressao -> . expressao TIMESINCREMENT expressao
    (49) expressao -> . expressao DIVIDEINCREMENT expressao
    (50) expressao -> . expressao MODINCREMENT expressao
    (51) expressao -> . expressao EEQ expressao
    (52) expressao -> . vardecl
    (53) expressao -> . expressao NNEQ expressao
    (54) expressao -> . expressao INTER expressao INTER expressao
    (55) expressao -> . NINT
    (56) expressao -> . NFLOAT
    (57) expressao -> . string
    (58) expressao -> . call
    (59) expressao -> . assign
    (60) expressao -> . ID
    (61) expressao -> . FALSE
    (62) expressao -> . TRUE
    (63) expressao -> . NOT expressao
    (5) vardecl -> . tipodecl ID COLON tipo
    (6) vardecl -> . tipodecl ID COLON tipo ASSIGN expressao
    (7) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
    (8) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (9) vardecl -> . tipodecl ID COLON LPAREN tipo BAR tipo RPAREN RBRACKET LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (77) string -> . STRINGD
    (78) string -> . STRINGS
    (64) call -> . ID LPAREN parametros RPAREN
    (65) call -> . ID LPAREN RPAREN
    (68) assign -> . ID ASSIGN expressao
    (69) tipodecl -> . LET
    (70) tipodecl -> . VAR
    (71) tipodecl -> . CONST tipo

    RETURN          shift and go to state 8
    WHILE           shift and go to state 10
    IF              shift and go to state 11
    FOR             shift and go to state 12
    FUNCTION        shift and go to state 13
    CONST           shift and go to state 14
    INCREMENTN      shift and go to state 15
    DECREMENTN      shift and go to state 16
    NINT            shift and go to state 18
    NFLOAT          shift and go to state 19
    ID              shift and go to state 7
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    NOT             shift and go to state 25
    STRINGD         shift and go to state 27
    STRINGS         shift and go to state 28
    LET             shift and go to state 29
    VAR             shift and go to state 30

    programa                       shift and go to state 1
    funcdecl                       shift and go to state 2
    comandos                       shift and go to state 3
    signature                      shift and go to state 4
    comando                        shift and go to state 5
    tipofunc                       shift and go to state 6
    expressao                      shift and go to state 9
    vardecl                        shift and go to state 17
    string                         shift and go to state 20
    call                           shift and go to state 21
    assign                         shift and go to state 22
    tipodecl                       shift and go to state 26

state 1

    (0) S' -> programa .



state 2

    (1) programa -> funcdecl .
    (2) programa -> funcdecl . programa
    (1) programa -> . funcdecl
    (2) programa -> . funcdecl programa
    (3) programa -> . comandos
    (4) programa -> . comandos programa
    (10) funcdecl -> . signature body
    (18) comandos -> . comando
    (19) comandos -> . comando comandos
    (11) signature -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo body
    (12) signature -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON
    (20) comando -> . RETURN expressao SEMICOLON
    (21) comando -> . expressao SEMICOLON
    (22) comando -> . WHILE LPAREN expressao RPAREN bodyorcomando
    (23) comando -> . IF LPAREN expressao RPAREN bodyorcomando
    (24) comando -> . IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
    (25) comando -> . FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
    (14) tipofunc -> . FUNCTION
    (15) tipofunc -> . CONST
    (30) expressao -> . expressao PLUS expressao
    (31) expressao -> . expressao MINUS expressao
    (32) expressao -> . expressao TIMES expressao
    (33) expressao -> . expressao DIVIDE expressao
    (34) expressao -> . expressao MOD expressao
    (35) expressao -> . expressao OR expressao
    (36) expressao -> . expressao AND expressao
    (37) expressao -> . expressao EQ expressao
    (38) expressao -> . expressao NEQ expressao
    (39) expressao -> . expressao GE expressao
    (40) expressao -> . expressao LE expressao
    (41) expressao -> . expressao LT expressao
    (42) expressao -> . expressao GT expressao
    (43) expressao -> . expressao INCREMENT
    (44) expressao -> . expressao EXPO expressao
    (45) expressao -> . expressao DECREMENT
    (46) expressao -> . INCREMENTN expressao
    (47) expressao -> . DECREMENTN expressao
    (48) expressao -> . expressao TIMESINCREMENT expressao
    (49) expressao -> . expressao DIVIDEINCREMENT expressao
    (50) expressao -> . expressao MODINCREMENT expressao
    (51) expressao -> . expressao EEQ expressao
    (52) expressao -> . vardecl
    (53) expressao -> . expressao NNEQ expressao
    (54) expressao -> . expressao INTER expressao INTER expressao
    (55) expressao -> . NINT
    (56) expressao -> . NFLOAT
    (57) expressao -> . string
    (58) expressao -> . call
    (59) expressao -> . assign
    (60) expressao -> . ID
    (61) expressao -> . FALSE
    (62) expressao -> . TRUE
    (63) expressao -> . NOT expressao
    (5) vardecl -> . tipodecl ID COLON tipo
    (6) vardecl -> . tipodecl ID COLON tipo ASSIGN expressao
    (7) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
    (8) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (9) vardecl -> . tipodecl ID COLON LPAREN tipo BAR tipo RPAREN RBRACKET LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (77) string -> . STRINGD
    (78) string -> . STRINGS
    (64) call -> . ID LPAREN parametros RPAREN
    (65) call -> . ID LPAREN RPAREN
    (68) assign -> . ID ASSIGN expressao
    (69) tipodecl -> . LET
    (70) tipodecl -> . VAR
    (71) tipodecl -> . CONST tipo

    $end            reduce using rule 1 (programa -> funcdecl .)
    RETURN          shift and go to state 8
    WHILE           shift and go to state 10
    IF              shift and go to state 11
    FOR             shift and go to state 12
    FUNCTION        shift and go to state 13
    CONST           shift and go to state 14
    INCREMENTN      shift and go to state 15
    DECREMENTN      shift and go to state 16
    NINT            shift and go to state 18
    NFLOAT          shift and go to state 19
    ID              shift and go to state 7
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    NOT             shift and go to state 25
    STRINGD         shift and go to state 27
    STRINGS         shift and go to state 28
    LET             shift and go to state 29
    VAR             shift and go to state 30

    funcdecl                       shift and go to state 2
    programa                       shift and go to state 31
    comandos                       shift and go to state 3
    signature                      shift and go to state 4
    comando                        shift and go to state 5
    tipofunc                       shift and go to state 6
    expressao                      shift and go to state 9
    vardecl                        shift and go to state 17
    string                         shift and go to state 20
    call                           shift and go to state 21
    assign                         shift and go to state 22
    tipodecl                       shift and go to state 26

state 3

    (3) programa -> comandos .
    (4) programa -> comandos . programa
    (1) programa -> . funcdecl
    (2) programa -> . funcdecl programa
    (3) programa -> . comandos
    (4) programa -> . comandos programa
    (10) funcdecl -> . signature body
    (18) comandos -> . comando
    (19) comandos -> . comando comandos
    (11) signature -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo body
    (12) signature -> . tipofunc ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON
    (20) comando -> . RETURN expressao SEMICOLON
    (21) comando -> . expressao SEMICOLON
    (22) comando -> . WHILE LPAREN expressao RPAREN bodyorcomando
    (23) comando -> . IF LPAREN expressao RPAREN bodyorcomando
    (24) comando -> . IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
    (25) comando -> . FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
    (14) tipofunc -> . FUNCTION
    (15) tipofunc -> . CONST
    (30) expressao -> . expressao PLUS expressao
    (31) expressao -> . expressao MINUS expressao
    (32) expressao -> . expressao TIMES expressao
    (33) expressao -> . expressao DIVIDE expressao
    (34) expressao -> . expressao MOD expressao
    (35) expressao -> . expressao OR expressao
    (36) expressao -> . expressao AND expressao
    (37) expressao -> . expressao EQ expressao
    (38) expressao -> . expressao NEQ expressao
    (39) expressao -> . expressao GE expressao
    (40) expressao -> . expressao LE expressao
    (41) expressao -> . expressao LT expressao
    (42) expressao -> . expressao GT expressao
    (43) expressao -> . expressao INCREMENT
    (44) expressao -> . expressao EXPO expressao
    (45) expressao -> . expressao DECREMENT
    (46) expressao -> . INCREMENTN expressao
    (47) expressao -> . DECREMENTN expressao
    (48) expressao -> . expressao TIMESINCREMENT expressao
    (49) expressao -> . expressao DIVIDEINCREMENT expressao
    (50) expressao -> . expressao MODINCREMENT expressao
    (51) expressao -> . expressao EEQ expressao
    (52) expressao -> . vardecl
    (53) expressao -> . expressao NNEQ expressao
    (54) expressao -> . expressao INTER expressao INTER expressao
    (55) expressao -> . NINT
    (56) expressao -> . NFLOAT
    (57) expressao -> . string
    (58) expressao -> . call
    (59) expressao -> . assign
    (60) expressao -> . ID
    (61) expressao -> . FALSE
    (62) expressao -> . TRUE
    (63) expressao -> . NOT expressao
    (5) vardecl -> . tipodecl ID COLON tipo
    (6) vardecl -> . tipodecl ID COLON tipo ASSIGN expressao
    (7) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
    (8) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (9) vardecl -> . tipodecl ID COLON LPAREN tipo BAR tipo RPAREN RBRACKET LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (77) string -> . STRINGD
    (78) string -> . STRINGS
    (64) call -> . ID LPAREN parametros RPAREN
    (65) call -> . ID LPAREN RPAREN
    (68) assign -> . ID ASSIGN expressao
    (69) tipodecl -> . LET
    (70) tipodecl -> . VAR
    (71) tipodecl -> . CONST tipo

    $end            reduce using rule 3 (programa -> comandos .)
    RETURN          shift and go to state 8
    WHILE           shift and go to state 10
    IF              shift and go to state 11
    FOR             shift and go to state 12
    FUNCTION        shift and go to state 13
    CONST           shift and go to state 14
    INCREMENTN      shift and go to state 15
    DECREMENTN      shift and go to state 16
    NINT            shift and go to state 18
    NFLOAT          shift and go to state 19
    ID              shift and go to state 7
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    NOT             shift and go to state 25
    STRINGD         shift and go to state 27
    STRINGS         shift and go to state 28
    LET             shift and go to state 29
    VAR             shift and go to state 30

    comandos                       shift and go to state 3
    programa                       shift and go to state 32
    funcdecl                       shift and go to state 2
    signature                      shift and go to state 4
    comando                        shift and go to state 5
    tipofunc                       shift and go to state 6
    expressao                      shift and go to state 9
    vardecl                        shift and go to state 17
    string                         shift and go to state 20
    call                           shift and go to state 21
    assign                         shift and go to state 22
    tipodecl                       shift and go to state 26

state 4

    (10) funcdecl -> signature . body
    (13) body -> . LBRACE comandos RBRACE

    LBRACE          shift and go to state 34

    body                           shift and go to state 33

state 5

    (18) comandos -> comando .
    (19) comandos -> comando . comandos
    (18) comandos -> . comando
    (19) comandos -> . comando comandos
    (20) comando -> . RETURN expressao SEMICOLON
    (21) comando -> . expressao SEMICOLON
    (22) comando -> . WHILE LPAREN expressao RPAREN bodyorcomando
    (23) comando -> . IF LPAREN expressao RPAREN bodyorcomando
    (24) comando -> . IF LPAREN expressao RPAREN bodyorcomando ELSE bodyorcomando
    (25) comando -> . FOR LPAREN opexp SEMICOLON opexp SEMICOLON opexp RPAREN bodyorcomando
    (30) expressao -> . expressao PLUS expressao
    (31) expressao -> . expressao MINUS expressao
    (32) expressao -> . expressao TIMES expressao
    (33) expressao -> . expressao DIVIDE expressao
    (34) expressao -> . expressao MOD expressao
    (35) expressao -> . expressao OR expressao
    (36) expressao -> . expressao AND expressao
    (37) expressao -> . expressao EQ expressao
    (38) expressao -> . expressao NEQ expressao
    (39) expressao -> . expressao GE expressao
    (40) expressao -> . expressao LE expressao
    (41) expressao -> . expressao LT expressao
    (42) expressao -> . expressao GT expressao
    (43) expressao -> . expressao INCREMENT
    (44) expressao -> . expressao EXPO expressao
    (45) expressao -> . expressao DECREMENT
    (46) expressao -> . INCREMENTN expressao
    (47) expressao -> . DECREMENTN expressao
    (48) expressao -> . expressao TIMESINCREMENT expressao
    (49) expressao -> . expressao DIVIDEINCREMENT expressao
    (50) expressao -> . expressao MODINCREMENT expressao
    (51) expressao -> . expressao EEQ expressao
    (52) expressao -> . vardecl
    (53) expressao -> . expressao NNEQ expressao
    (54) expressao -> . expressao INTER expressao INTER expressao
    (55) expressao -> . NINT
    (56) expressao -> . NFLOAT
    (57) expressao -> . string
    (58) expressao -> . call
    (59) expressao -> . assign
    (60) expressao -> . ID
    (61) expressao -> . FALSE
    (62) expressao -> . TRUE
    (63) expressao -> . NOT expressao
    (5) vardecl -> . tipodecl ID COLON tipo
    (6) vardecl -> . tipodecl ID COLON tipo ASSIGN expressao
    (7) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
    (8) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (9) vardecl -> . tipodecl ID COLON LPAREN tipo BAR tipo RPAREN RBRACKET LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (77) string -> . STRINGD
    (78) string -> . STRINGS
    (64) call -> . ID LPAREN parametros RPAREN
    (65) call -> . ID LPAREN RPAREN
    (68) assign -> . ID ASSIGN expressao
    (69) tipodecl -> . LET
    (70) tipodecl -> . VAR
    (71) tipodecl -> . CONST tipo

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for INCREMENTN resolved as shift
  ! shift/reduce conflict for DECREMENTN resolved as shift
  ! shift/reduce conflict for NINT resolved as shift
  ! shift/reduce conflict for NFLOAT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for STRINGD resolved as shift
  ! shift/reduce conflict for STRINGS resolved as shift
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
    FUNCTION        reduce using rule 18 (comandos -> comando .)
    $end            reduce using rule 18 (comandos -> comando .)
    RBRACE          reduce using rule 18 (comandos -> comando .)
    RETURN          shift and go to state 8
    WHILE           shift and go to state 10
    IF              shift and go to state 11
    FOR             shift and go to state 12
    INCREMENTN      shift and go to state 15
    DECREMENTN      shift and go to state 16
    NINT            shift and go to state 18
    NFLOAT          shift and go to state 19
    ID              shift and go to state 7
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    NOT             shift and go to state 25
    STRINGD         shift and go to state 27
    STRINGS         shift and go to state 28
    LET             shift and go to state 29
    VAR             shift and go to state 30
    CONST           shift and go to state 36

  ! RETURN          [ reduce using rule 18 (comandos -> comando .) ]
  ! WHILE           [ reduce using rule 18 (comandos -> comando .) ]
  ! IF              [ reduce using rule 18 (comandos -> comando .) ]
  ! FOR             [ reduce using rule 18 (comandos -> comando .) ]
  ! CONST           [ reduce using rule 18 (comandos -> comando .) ]
  ! INCREMENTN      [ reduce using rule 18 (comandos -> comando .) ]
  ! DECREMENTN      [ reduce using rule 18 (comandos -> comando .) ]
  ! NINT            [ reduce using rule 18 (comandos -> comando .) ]
  ! NFLOAT          [ reduce using rule 18 (comandos -> comando .) ]
  ! ID              [ reduce using rule 18 (comandos -> comando .) ]
  ! FALSE           [ reduce using rule 18 (comandos -> comando .) ]
  ! TRUE            [ reduce using rule 18 (comandos -> comando .) ]
  ! NOT             [ reduce using rule 18 (comandos -> comando .) ]
  ! STRINGD         [ reduce using rule 18 (comandos -> comando .) ]
  ! STRINGS         [ reduce using rule 18 (comandos -> comando .) ]
  ! LET             [ reduce using rule 18 (comandos -> comando .) ]
  ! VAR             [ reduce using rule 18 (comandos -> comando .) ]

    comando                        shift and go to state 5
    comandos                       shift and go to state 35
    expressao                      shift and go to state 9
    vardecl                        shift and go to state 17
    string                         shift and go to state 20
    call                           shift and go to state 21
    assign                         shift and go to state 22
    tipodecl                       shift and go to state 26

state 6

    (11) signature -> tipofunc . ID LPAREN funcparametros RPAREN COLON tipo body
    (12) signature -> tipofunc . ID LPAREN funcparametros RPAREN COLON tipo SEMICOLON

    ID              shift and go to state 37


state 7

    (60) expressao -> ID .
    (64) call -> ID . LPAREN parametros RPAREN
    (65) call -> ID . LPAREN RPAREN
    (68) assign -> ID . ASSIGN expressao

    SEMICOLON       reduce using rule 60 (expressao -> ID .)
    PLUS            reduce using rule 60 (expressao -> ID .)
    MINUS           reduce using rule 60 (expressao -> ID .)
    TIMES           reduce using rule 60 (expressao -> ID .)
    DIVIDE          reduce using rule 60 (expressao -> ID .)
    MOD             reduce using rule 60 (expressao -> ID .)
    OR              reduce using rule 60 (expressao -> ID .)
    AND             reduce using rule 60 (expressao -> ID .)
    EQ              reduce using rule 60 (expressao -> ID .)
    NEQ             reduce using rule 60 (expressao -> ID .)
    GE              reduce using rule 60 (expressao -> ID .)
    LE              reduce using rule 60 (expressao -> ID .)
    LT              reduce using rule 60 (expressao -> ID .)
    GT              reduce using rule 60 (expressao -> ID .)
    INCREMENT       reduce using rule 60 (expressao -> ID .)
    EXPO            reduce using rule 60 (expressao -> ID .)
    DECREMENT       reduce using rule 60 (expressao -> ID .)
    TIMESINCREMENT  reduce using rule 60 (expressao -> ID .)
    DIVIDEINCREMENT reduce using rule 60 (expressao -> ID .)
    MODINCREMENT    reduce using rule 60 (expressao -> ID .)
    EEQ             reduce using rule 60 (expressao -> ID .)
    NNEQ            reduce using rule 60 (expressao -> ID .)
    INTER           reduce using rule 60 (expressao -> ID .)
    COMMA           reduce using rule 60 (expressao -> ID .)
    RPAREN          reduce using rule 60 (expressao -> ID .)
    RBRACKET        reduce using rule 60 (expressao -> ID .)
    LPAREN          shift and go to state 38
    ASSIGN          shift and go to state 39


state 8

    (20) comando -> RETURN . expressao SEMICOLON
    (30) expressao -> . expressao PLUS expressao
    (31) expressao -> . expressao MINUS expressao
    (32) expressao -> . expressao TIMES expressao
    (33) expressao -> . expressao DIVIDE expressao
    (34) expressao -> . expressao MOD expressao
    (35) expressao -> . expressao OR expressao
    (36) expressao -> . expressao AND expressao
    (37) expressao -> . expressao EQ expressao
    (38) expressao -> . expressao NEQ expressao
    (39) expressao -> . expressao GE expressao
    (40) expressao -> . expressao LE expressao
    (41) expressao -> . expressao LT expressao
    (42) expressao -> . expressao GT expressao
    (43) expressao -> . expressao INCREMENT
    (44) expressao -> . expressao EXPO expressao
    (45) expressao -> . expressao DECREMENT
    (46) expressao -> . INCREMENTN expressao
    (47) expressao -> . DECREMENTN expressao
    (48) expressao -> . expressao TIMESINCREMENT expressao
    (49) expressao -> . expressao DIVIDEINCREMENT expressao
    (50) expressao -> . expressao MODINCREMENT expressao
    (51) expressao -> . expressao EEQ expressao
    (52) expressao -> . vardecl
    (53) expressao -> . expressao NNEQ expressao
    (54) expressao -> . expressao INTER expressao INTER expressao
    (55) expressao -> . NINT
    (56) expressao -> . NFLOAT
    (57) expressao -> . string
    (58) expressao -> . call
    (59) expressao -> . assign
    (60) expressao -> . ID
    (61) expressao -> . FALSE
    (62) expressao -> . TRUE
    (63) expressao -> . NOT expressao
    (5) vardecl -> . tipodecl ID COLON tipo
    (6) vardecl -> . tipodecl ID COLON tipo ASSIGN expressao
    (7) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET RBRACKET
    (8) vardecl -> . tipodecl ID COLON tipo LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (9) vardecl -> . tipodecl ID COLON LPAREN tipo BAR tipo RPAREN RBRACKET LBRACKET RBRACKET ASSIGN LBRACKET listexp RBRACKET
    (77) string -> . STRINGD
    (78) string -> . STRINGS
    (64) call -> . ID LPAREN parametros RPAREN
    (65) call -> . ID LPAREN RPAREN
    (68) assign -> . ID ASSIGN expressao
    (69) tipodecl -> . LET
    (70) tipodecl -> . VAR
    (71) tipodecl -> . CONST tipo
